# gradus-ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  .railwayignore  .replit  AUDIT_REPORT.md  Dockerfile  Procfile  README.md  SCHEDULER_AUDIT.md  SCRAPER_DIAGNOSTIC_REPORT.md  backup.sql  export_database.py  nixpacks.toml  package.json  pyproject.toml  railway.json  railway.toml  render.yaml  replit.md  requirements.txt  start.sh
attached_assets/: 001_Договір_маркетингу_ББ_2026_1769087829764.doc  201_Транспортне_експедирування_ББ_2026_1769087829765.docx  222_Транспортне_експедирування_ТД_АВ_+_банк_гарантія_2026_1769088476243.docx  311_Типовий_Дистрибюція_ББ_-_передоплата_2026_1769087829766.doc  312_Типовий_Дистрибюція_ТД_АВ_-_передоплата_2026_1769088476243.doc  4202_Типовой_Поставки_ТД_АВ_(представник)_-_отсрочка_2026_1769088476246.doc  421_Типовийй_Поставки_(представник)_-_передоплата_2026_1769087829766.doc  422_Типовий_Поставки_ТД_АВ_(представник)_-_передоплата_2026_1769088476244.doc  611_Типова_ДУ_-_Вчасно_ББ_2026_1769087829767.doc  621_ТИПОВА_ДУ_пролонгація_2026_1769087829767.docx  701_Типовий_договір_маркетингу_Світ_Бейкерс_1769087857756.doc  704_Типова_ДУ_ретро-бонус_1769087857757.docx  705_Типовой_Поставки_(закупівля)_Світ_Бейкерс_2024_-_отсрочк_1769087857758.doc  INTEGRATION_INSTRUCTIONS_1766137098861.md  Pasted--2025-12-01-10-18-27-Starting-FastAPI-backend-on-port-5000-Backend-will-serve-both-API-and-front-1764678229995_1764678229996.txt  Pasted--2026--1775559108210_1775559108210.txt  (+311 more)
backend/: database.py  db_migrations.py  hunt_config.py  (+12 more)
(+203 files in other folders)
