[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.72.1",
    "apscheduler>=3.11.1",
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.121.1",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "openai>=2.7.2",
    "playwright>=1.56.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "python-telegram-bot>=22.5",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "trafilatura>=2.0.0",
    "uvicorn>=0.38.0",
]
